Add `type: recipe` to recipes & write missing descriptions

--- a/src/content/docs/en/guides/rss.mdx
+++ b/src/content/docs/en/guides/rss.mdx
@@ -1,7 +1,8 @@
 ---
-title: RSS
-description: An intro to RSS in Astro
+title: Add an RSS feed
+description: Let users subscribe to your content by adding an RSS feed to your Astro site.
 i18nReady: true
+type: recipe
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 import Since from '~/components/Since.astro'
