--- a/src/content/docs/en/recipes/add-yaml-support.mdx
+++ b/src/content/docs/en/recipes/add-yaml-support.mdx
@@ -1,6 +1,8 @@
 ---
 title: Add YAML Support
+description: Learn how you can import YAML data in your projects by extending file-type support in Astro.
 i18nReady: false
+type: recipe
 ---
 
 The YAML (`.yml`) data format isn't natively supported by Astro, but you can add support for it by using a compatible Rollup plugin like [`@rollup/plugin-yaml`](https://www.npmjs.com/package/@rollup/plugin-yaml):
