--- a/src/content/docs/en/recipes/captcha.mdx
+++ b/src/content/docs/en/recipes/captcha.mdx
@@ -1,6 +1,8 @@
 ---
-title: Verifying a Captcha
+title: Verify a Captcha
+description: Learn how to verify a user is human using a “recaptcha” API route.
 i18nReady: false
+type: recipe
 ---
 
 [Server endpoints](/en/core-concepts/endpoints/#server-endpoints-api-routes) can be used as REST API endpoints to run functions such as authentications, database access, and verifications without exposing sensitive data to the client.
