Replace `<RecipeBox>` with `<RecipesNav>`

--- a/src/content/docs/en/recipes.mdx
+++ b/src/content/docs/en/recipes.mdx
@@ -3,29 +3,15 @@ title: More Recipes
 description: See guided examples of building features in Astro.
 i18nReady: false
 ---
-import RecipeBox from '~/components/recipes/RecipeBox.astro';
-import BackToRecipes from '~/components/recipes/BackToRecipes.astro';
+
+import RecipesNav from '~/components/RecipesNav.astro';
 
 See guided examples of adding features to your Astro project.
 
 
 ## Curated Recipes
 
-<RecipeBox icon="clipboard-check">
-  <a href="/en/guides/rss/">Add an RSS feed</a>
-</RecipeBox>
-
-<RecipeBox icon="puzzle-piece">
-  <a href="/en/core-concepts/sharing-state/">Share state across components with nanostores</a>
-</RecipeBox>
-
-<RecipeBox icon="puzzle-piece">
-  <a href="/en/recipes/captcha/">Verify a Captcha</a>
-</RecipeBox>
-
-<RecipeBox icon="puzzle-piece">
-  <a href="/en/recipes/add-yaml-support/">Add support for importing YAML</a>
-</RecipeBox>
+<RecipesNav />
 
 ## Community Resources
 
