--- a/src/content/docs/fr/guides/markdown-content.mdx
+++ b/src/content/docs/fr/guides/markdown-content.mdx
@@ -182,7 +182,7 @@ Par exemple, pour prévenir `<` d'être interprété comme le début d'une base 
 
 L'ajout de [l'intégration Astro MDX](/fr/guides/integrations-guide/mdx/) améliore votre création de Markdown avec des variables, des expressions et des composants JSX.
 
-Il ajoute aussi des fonctionnalités supplémentaires au MDX standard, incluant le support de [l'avant-propos de style Markdown dans MDX](https://mdxjs.com/guides/frontmatter/). Cela vous permet d'utiliser la plupart des fonctionnalités Markdown intégrées d'Astro, telles qu'une propriété d'[avant-propos de `layout`](#lavant-propos-layout) et un paramètre pour les [brouillons de page](#pages-brouillons).
+Il ajoute aussi des fonctionnalités supplémentaires au MDX standard, notamment la prise en charge du [frontmatter de style Markdown dans MDX] (https://mdxjs.com/guides/frontmatter/). Cela vous permet d'utiliser la plupart des fonctionnalités Markdown intégrées d'Astro, comme la propriété de [frontmatter `layout`](#frontmatter-layout) et un paramètre pour les [pages brouillons](#pages-brouillons).
 
 Les fichiers `.mdx` doivent être écrit dans la [syntaxe MDX](https://mdxjs.com/docs/what-is-mdx/#mdx-syntax) plutôt que dans la syntaxe de type HTML d'Astro.
 
@@ -198,140 +198,66 @@ export const title = 'Mon premier billet sur le MDX'
 # {title}
 ```
 
-### Exemple de Base
+### Utilisation de variables frontmatter en MDX
 
-La façon la plus simple de commencer à utiliser Markdown dans Astro est de créer une route vers une page d'accueil `src/pages/index.md` dans votre projet. Copiez le modèle de base ci-dessous dans votre projet, puis consultez le HTML de la page d'accueil générée à la route racine de votre projet. Généralement, cela se fait à [http://localhost:3000/](http://localhost:3000/).
+L'intégration MDX d'Astro inclut le support pour l'utilisation par défaut de frontmatter en MDX. Ajoutez les propriétés de frontmatter comme vous le feriez dans des fichiers Markdown, et ces variables sont accessibles pour être utilisées dans la template, dans son [composant `layout`](#frontmatter-layout), et comme propriétés nommées lors de l'[importation du fichier](#importer-du-contenu-markdown) ailleurs.
 
-```markdown
+```mdx title="/src/pages/posts/post-1.mdx"
 ---
-# Example: src/pages/index.md
-title: Hello, World
+layout: '../../layouts/BlogPostLayout.astro'
+title: 'Mon premier billet MDX'
 ---
-# Salutation humble voyageur !
 
-Ceci est votre première Page Markdown. Elle n'est probablement pas très jolie, mais
-le Markdown supporte le **gras** et l'_italique_.
-
-Pour en savoir plus sur l'ajout d'un Layout à votre page, lisez la section suivante sur **les Layouts Markdown**.
+# {frontmatter.title}
 ```
 
-### Les Layouts Markdown
+### Utilisation des composants en MDX
 
-Les Pages Markdown ont une variable spéciale `layout` pour définir le chemin relatif vers un [composant Layout Astro](/fr/core-concepts/layouts/). Ce composant va englober votre contenu Markdown, en apportant la structure de base et tous les autres éléments de mise en page inclus dans le Layout.
+Après avoir installé l'intégration MDX, vous pouvez importer et utiliser les [composants Astro](/fr/core-concepts/astro-components/#props-de-composant) et les [composants de framework d'interface utilisateur](/fr/core-concepts/framework-components/#utilisation-des-composants-de-framework) dans des fichiers MDX (`.mdx`) comme vous le feriez avec n'importe quel autre composant Astro.
 
-```markdown
+N'oubliez pas d'inclure une `client:directive` sur les composants de votre framework d'interface utilisateur, si nécessaire !
+
+Vous trouverez d'autres exemples d'utilisation des instructions d'importation et d'exportation dans la [documentation MDX](https://mdxjs.com/docs/what-is-mdx/#esm).
+
+```mdx title="src/pages/about.mdx" {5-6} /<.+\/>/
 ---
 layout: ../layouts/BaseLayout.astro
+title: À propos de moi
 ---
+import Button from '../components/Button.astro';
+import ReactCounter from '../components/ReactCounter.jsx';
+
+Je vis sur **Mars** mais n'hésitez pas à <Button title="Me contacter" />.
+
+Voici mon composant compteur, fonctionnant en MDX :
+
+<ReactCounter client:load />
 ```
 
-Un Layout typique pour les Pages Markdown comprend :
+#### Affectation de composants personnalisés à des éléments HTML
 
-1. la propriété `content` pour accéder aux données de l'en-tête de la Page Markdown.
-2. un [`<slot />` par défaut](/fr/core-concepts/astro-components/#les-emplacements-slots) pour indiquer où le contenu Markdown de la page devrait être affiché.
+Avec MDX, vous pouvez associer la syntaxe Markdown à des composants personnalisés au lieu de leurs éléments HTML standard. Cela vous permet d'écrire dans la syntaxe Markdown standard, mais d'appliquer un style de composant spécial aux éléments sélectionnés.
 
-```astro
----
-// src/layouts/BaseLayout.astro
-// 1. La propriété `content` donne accès aux données de l'en-tête de la Page Markdown
-const { content } = Astro.props;
----
-<html>
-  <head>
-    <!-- Ajoutez d'autres éléments Head ici, comme des styles et des balises meta. -->
-    <title>{content.title}</title>
-  </head>
-  <body>
-    <!-- Ajoutez d'autres composants UI ici, comme des navigations et pieds de page communs. -->
-    <h1>{content.title} par {content.author}</h1>
-    <!-- 2. Le HTML généré sera passé dans le Slot par défaut. -->
-    <slot />
-    <p>Écrit le : {content.date}</p>
-  </body>
-</html>
+Importez votre composant personnalisé dans votre fichier `.mdx`, puis exportez un objet `components` qui fait correspondre l'élément HTML standard à votre composant personnalisé :
+
+```mdx title="src/pages/about.mdx"
+import Blockquote from '../components/Blockquote.astro';
+export const components = {blockquote: Blockquote}
+
+> Cette citation sera un Blockquote personnalisé
 ```
 
-La propriété `content` contient également une propriété `astro` avec des métadonnées supplémentaires sur la page tels que le Markdown complet `source` et un objet `headers`.
 
-Un exemple de `content` d'un article de blog pourrait ressembler à ça :
-
-```json
-{
-  /** En-tête d'un article de blog
-  "title": "Version 0.18 d'Astro",
-  "date": "Mardi 27 Juillet 2021",
-  "author": "Matthew Phillips",
-  "description": "Astro 0.18 est notre plus grosse version depuis son lancement.",
-  "draft": false,
-  "keywords": ["astro", "release", "announcement"]
-  **/
-  "astro": {
-    "headers": [
-      {
-        "depth": 1,
-        "text": "Version 0.18 d'Astro",
-        "slug": "version-018-dAstro"
-      },
-      {
-        "depth": 2,
-        "text": "Hydratation Partielle Responsive",
-        "slug": "hydratation-partielle-responsive"
-      }
-      /* ... */
-    ],
-    "source": "# Version 0.18 d'Astro\nIl y a un peu plus d'un mois, la première bêta publique [...]"
-  },
-  "url": ""
-}
+```astro title="src/components/Blockquote.astro"
+---
+const props = Astro.props;
+---
+<blockquote {...props} class="bg-blue-50 p-4">
+  <span class="text-4xl text-blue-600 mb-2">“</span>
+  <slot /> <!-- N'oubliez pas d'ajouter un `<slot/>` pour le contenu enfant ! -->
+</blockquote>
 ```
-
-> 💡 `astro` et `url` sont les seules propriétés garanties par Astro dans la propriété `content`. Le reste de l'objet est défini par vos variables d'en-tête.
-
-### L'en-tête comme propriétés
-
-N'importe quel composant Astro (pas seulement les Layouts!) peut recevoir les valeurs définies dans votre en-tête Markdown comme propriétés. Vous pouvez spécifier plusieurs types de données en utilisant les en-têtes Markdown sous le format YAML, et capturer également des informations plus complètes à partir de chaque article de blog pour l'utiliser sur votre site Astro.
-
-Accédez à ces valeurs dans n'importe quel fichier `.astro` comme vous le feriez dans un composant Layout, comme décrit ci-dessus.
-
-### Identifiants d'En-tête
-
-Astro va ajouter automatiquement des identifiants à tous les en-têtes dans les fichiers Markdown grâce à [github-slugger](https://github.com/Flet/github-slugger). Mais si un identifiant personnalisé est spécifié, il ne sera pas remplacé.
-
-Ces IDs seront ajoutés _après_ l’exécution tous les autres plugins, donc si vous avez un plugin comme `rehype-toc` qui a besoin d'IDs, vous devez ajouter votre propre plugin de "slugging" (comme `rehype-slug`).
-
-### Utilisez des variables dans Markdown
-
-Les variables d'en-tête peuvent être utilisées directement dans votre Markdown comme propriétés de l'objet `frontmatter`.
-
-```markdown
----
-author: Léon
-age: 42
----
-
-# À propos de l'auteur
-
-{frontmatter.author} à {frontmatter.age}ans et vit au Canada à Toronto.
-```
-
-### Utilisez des composants dans Markdown
-
-Vous pouvez importer des composants dans votre fichier Markdown avec `setup` et les utiliser avec le reste du contenu. L'objet `frontmatter` est également disponible pour les composants importés.
-
-```markdown
----
-layout: ../layouts/BaseLayout.astro
-setup: |
-  import Author from '../../components/Author.astro'
-  import Biography from '../components/Biography.jsx'
-author: Leon
----
-
-<Author name={frontmatter.author}/>
-<Biography client:visible>
-  {frontmatter.author} vit au Canada à Toronto et aimes la photographie.
-</Biography>
-```
+Consultez le [site Web MDX](https://mdxjs.com/table-of-components/) pour obtenir la liste complète des éléments HTML qui peuvent être remplacés par des composants personnalisés.
 
 ## Importer du contenu Markdown
 
