docs: update cypress test guide with expected output

--- a/src/content/docs/en/guides/testing.mdx
+++ b/src/content/docs/en/guides/testing.mdx
@@ -6,7 +6,7 @@ i18nReady: true
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
-Testing helps you write and maintain working Astro code. Astro supports many popular tools for unit tests, component tests, and end-to-end tests including Jest, Mocha, Jasmine, [Cypress](#cypress) and [Playwright](#playwright). You can even install framework-specific testing libraries such as React Testing Library to test your UI framework components.
+Testing helps you write and maintain working Astro code. Astro supports many popular tools for unit tests, component tests, and end-to-end tests including Jest, Mocha, Jasmine, [Cypress](https://cypress.io) and [Playwright](https://playwright.dev). You can even install framework-specific testing libraries such as React Testing Library to test your UI framework components.
 
 Testing frameworks allow you to state **assertions** or **expectations** about how your code should behave in specific situations, then compare these to the actual behavior of your current code. 
 
@@ -60,7 +60,7 @@ export default defineConfig({
 
 ### Create your first Cypress test
 
-1. Choose a page to test. We will use the example `index.astro` page below.
+1. Choose a page to test. This example will test the example page `index.astro` below.
 
     ```html title="src/pages/index.astro"
     ---
@@ -76,7 +76,7 @@ export default defineConfig({
     </html>
     ```
 
-2. Create an `index.spec.js` file in the `cypress/e2e` folder. Use the following test into the file to verify that the page title and header are correct.
+2. Create an `index.spec.js` file in the `cypress/e2e` folder. Use the following test in the file to verify that the page title and header are correct.
 
     ```js title="cypress/e2e/index.cy.ts"
     it('titles are correct', () => {
@@ -95,19 +95,45 @@ export default defineConfig({
 
 Cypress can be run from the command line or from the Cypress App. The App provides a visual interface for running and debugging your tests.
 
-First, start the dev server so Cypress can access your live site. To run our test from the previous example using the command line, execute the following command:
+First, start the dev server so Cypress can access your live site.
+
+To run our test from the previous example using the command line, execute the following command:
 
 ```shell
 npx cypress run
 ```
 
-To run the test using the Cypress App, execute the following command:
+Alternatively, to run the test using the Cypress App, execute the following command:
 
 ```shell
 npx cypress open
 ```
 
 Once the Cypress App is launched, choose **E2E Testing**, then select the browser to be used to run tests.
+
+Once the test run is finished, you should see green marks in the output confirming that your test passed:
+
+```shell title="Output from npx cypress run"
+Running:  index.cy.ts                                                                     (1 of 1)
+
+
+✓ titles are correct (107ms)
+
+1 passing (1s)
+```
+
+:::note[fail the test]
+To check that your test really does work, you can change the following line in the `index.astro` file:
+
+ ```astro title="src/pages/index.astro" del={2} ins={3}
+  <body>
+    <h1>Hello world from Astro</h1>
+    <h1>Hello from Astro</h1>
+  </body>
+```
+
+and then run the test again. You should see a red mark in the output confirming that your test failed.
+:::
 
 ### Next steps
 
@@ -146,7 +172,7 @@ Alternatively, you can install Playwright within your Astro project using the pa
 
 ### Create your first Playwright test
 
-1. Choose a page to test. We will use the example `index.astro` page below.
+1. Choose a page to test. This example will test the example page `index.astro` below.
 
     ```html title="src/pages/index.astro"
     ---
