sharing state -> share state between islands

--- a/src/content/docs/en/core-concepts/sharing-state.mdx
+++ b/src/content/docs/en/core-concepts/sharing-state.mdx
@@ -1,5 +1,5 @@
 ---
-title: Sharing State
+title: Share State Between Islands
 description: Learn how to share state across components — and frameworks! — with Nano Stores.
 i18nReady: true
 type: recipe
