docs: minor changes to cypress testing guide

--- a/src/content/docs/en/guides/testing.mdx
+++ b/src/content/docs/en/guides/testing.mdx
@@ -111,7 +111,7 @@ npx cypress open
 
 Once the Cypress App is launched, choose **E2E Testing**, then select the browser to be used to run tests.
 
-Once the test run is finished, you should see green marks in the output confirming that your test passed:
+Once the test run is finished, you should see green check marks in the output confirming that your test passed:
 
 ```shell title="Output from npx cypress run"
 Running:  index.cy.ts                                                                     (1 of 1)
@@ -132,7 +132,7 @@ To check that your test really does work, you can change the following line in t
   </body>
 ```
 
-and then run the test again. You should see a red mark in the output confirming that your test failed.
+Then run the test again. You should see a red mark in the output confirming that your test failed.
 :::
 
 ### Next steps
