Improve dark-mode CSS in blog tutorial 6.3 (#2729)
* Improve dark-mode CSS in blog tutorial 6.3

* Fix CSS spacing typo

* Re-fix typo

---------

Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/content/docs/en/tutorial/6-islands/2.mdx
+++ b/src/content/docs/en/tutorial/6-islands/2.mdx
@@ -76,7 +76,7 @@ Choose some alternate colors to use in dark mode.
 1. In `global.css`, define some dark styles. You can choose your own, or copy and paste:
 
     ```css title="src/styles/global.css"
-    .dark body {
+    html.dark {
       background-color: #0d0950;
       color: #fff;
     }
