fixed broken links

--- a/src/content/docs/es/guides/upgrade-to/v2.mdx
+++ b/src/content/docs/es/guides/upgrade-to/v2.mdx
@@ -8,7 +8,7 @@ import FileTree from '~/components/FileTree.astro'
 
 Esta guía te ayudará a migrar de la versión Astro v1 a la Astro v2.
 
-¿Necesitas actualizar un proyecto más antiguo a la v1? Ve nuestra [guía de migración anterior](/en/guides/upgrade-to/v1/).
+¿Necesitas actualizar un proyecto más antiguo a la v1? Ve nuestra [guía de migración anterior](/es/guides/upgrade-to/v1/).
 
 ## Actualiza Astro
 
@@ -68,18 +68,18 @@ Checa que tanto tu entorno de desarrollo como tu entorno de producción estén u
     ```
     Si tu entorno de desarrollo necesita actualizarse, [instala Node](https://nodejs.org/es/download/).
 
-2. Checa la propia documentación del [entorno de producción](/es/guides/deploy) para verificar que ellos soportan Node 16.
+2. Checa la propia documentación del [entorno de producción](/es/guides/deploy/) para verificar que ellos soportan Node 16.
 
     Puedes especificar Node `16.12.0` para tu proyecto Astro en una opción de configuración del dashboard o en un archivo `.nvmrc`.
 
 
 ### Reservado: `src/content/`
 
-Astro v2.0 ahora incluye la API de Colecciones para organizar tus archivos Markdown y MDX en [colecciones de contenido](/en/guides/content-collections/). Esta API reserva `src/content/` como una carpeta especial.
+Astro v2.0 ahora incluye la API de Colecciones para organizar tus archivos Markdown y MDX en [colecciones de contenido](/es/guides/content-collections/). Esta API reserva `src/content/` como una carpeta especial.
 
 #### ¿Qué debería hacer?
 
-Renombra la carpeta existente `src/content/` para evitar conflictos. Esta carpeta, si es que existe, ahora solo se puede usar para [colecciones de contenido](/en/guides/content-collections/).
+Renombra la carpeta existente `src/content/` para evitar conflictos. Esta carpeta, si es que existe, ahora solo se puede usar para [colecciones de contenido](/es/guides/content-collections/).
 
 ### Cambió: `Astro.site` barra lateral
 
