--- a/src/content/docs/de/guides/troubleshooting.mdx
+++ b/src/content/docs/de/guides/troubleshooting.mdx
@@ -59,13 +59,13 @@ Das bedeutet, dass die [Content Security Policy](https://developer.mozilla.org/e
 
 ### Meine Komponente wird nicht gerendert
 
-Überprüfe zuerst, ob du die Komponente in deinem [`.astro`-Komponentenskript](/de/core-concepts/astro-components/#the-component-script) oder [`.mdx`-Datei](/de/guides/markdown-content/#using-components-in-mdx) **importiert** hast.
+Überprüfe zuerst, ob du die Komponente in deinem [`.astro`-Komponentenskript](/de/core-concepts/astro-components/#das-komponentenskript) oder [`.mdx`-Datei](/de/guides/markdown-content/#verwendung-von-komponenten-in-markdown) **importiert** hast.
 
 Dann überprüfe deine Importanweisung:
 
 - Verweist dein Import auf den falschen Ort? (Überprüfe deinen Importpfad.)
 
-- Hat dein Import den gleichen Namen wie die importierte Komponente? (Überprüfe deinen Komponentennamen und dass er der [`.astro`-Syntax folgt](/de/core-concepts/astro-components/#differences-between-astro-and-jsx).)
+- Hat dein Import den gleichen Namen wie die importierte Komponente? (Überprüfe deinen Komponentennamen und dass er der [`.astro`-Syntax folgt](/de/core-concepts/astro-components/#jsx-ausdrücke).)
 
 - Hast du die Erweiterung in den Import aufgenommen? (Überprüfe, ob deine importierte Datei eine Erweiterung enthält, z.B. `.astro`, `.md`, `.vue`, `.svelte`. Hinweis: Dateierweiterungen sind nur für `.js(x)` und `.ts(x)` Dateien **nicht** erforderlich.)
 
@@ -73,7 +73,7 @@ Dann überprüfe deine Importanweisung:
 
 Wenn deine Komponente zwar gerendert wird (siehe oben), aber nicht auf Benutzerinteraktionen reagiert, fehlt dir vielleicht eine [`client:*`-Direktive](/de/reference/directives-reference/#client-directives), um deine Komponente zu hydratisieren.
 
-Standardmäßig wird eine [UI-Framework-Komponente im Client nicht hydratisiert](/de/core-concepts/framework-components/#hydrating-interactive-components). Wenn keine `client:*`-Direktive angegeben wird, wird ihr HTML-Code ohne JavaScript auf der Seite gerendert.
+Standardmäßig wird eine [UI-Framework-Komponente im Client nicht hydratisiert](/de/core-concepts/framework-components/#interaktive-komponenten-hydratisieren). Wenn keine `client:*`-Direktive angegeben wird, wird ihr HTML-Code ohne JavaScript auf der Seite gerendert.
 
 :::tip
 [Astro-Komponenten](/de/core-concepts/astro-components/) sind reine HTML-Vorlagenkomponenten ohne clientseitige Laufzeit. Du kannst jedoch ein `<script>`-Tag in deiner Astro-Komponentenvorlage verwenden, um JavaScript an den Browser zu senden, das im globalen Bereich ausgeführt wird.
@@ -138,7 +138,7 @@ In Astro funktioniert der `<head>`-Tag wie jeder andere HTML-Tag: Er wird nicht 
 
 ### Ein unerwartetes `<script>` oder `<style>` ist enthalten
 
-Es kann vorkommen, dass die `<script>`- oder `<style>`-Tags einer importierten Komponente in deinem HTML-Quelltext enthalten sind, auch wenn die Komponente in der endgültigen Ausgabe nicht erscheint. Dies ist zum Beispiel der Fall bei [bedingt gerenderten](/de/core-concepts/astro-components/#dynamic-html) Komponenten, die nicht angezeigt werden.
+Es kann vorkommen, dass die `<script>`- oder `<style>`-Tags einer importierten Komponente in deinem HTML-Quelltext enthalten sind, auch wenn die Komponente in der endgültigen Ausgabe nicht erscheint. Dies ist zum Beispiel der Fall bei [bedingt gerenderten](/de/core-concepts/astro-components/#jsx-ausdrücke) Komponenten, die nicht angezeigt werden.
 
 Der Build-Prozess von Astro arbeitet mit dem Modul-Graph: Sobald eine Komponente in der Vorlage enthalten ist, werden ihre `<script>`- und `<style>`-Tags verarbeitet, optimiert und gebündelt, unabhängig davon, ob sie in der endgültigen Ausgabe erscheint oder nicht. Dies gilt nicht für Skripte, wenn die Direktive "is:inline" angewendet wird.
 
