Fix the link to the English version of the docs

--- a/src/content/docs/pl/install/manual.mdx
+++ b/src/content/docs/pl/install/manual.mdx
@@ -192,4 +192,4 @@ Jeśli wykonałeś powyższe kroki, Twój katalog projektu powinien teraz wyglą
 
 Gratulacje, jesteś teraz przygotowany do korzystania z Astro!
 
-Jeśli podążałeś za tym przewodnikiem, możesz przejść bezpośrednio do [Krok 2: Uruchom Astro](/en/install/auto/#2-start-astro-), aby kontynuować i dowiedzieć się jak uruchomić Astro po raz pierwszy.
+Jeśli podążałeś za tym przewodnikiem, możesz przejść bezpośrednio do [Krok 2: Uruchom Astro](/pl/install/auto/#2-start-astro-), aby kontynuować i dowiedzieć się jak uruchomić Astro po raz pierwszy.
