--- a/src/content/docs/pl/install/manual.mdx
+++ b/src/content/docs/pl/install/manual.mdx
@@ -8,7 +8,7 @@ import FileTree from '~/components/FileTree.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
-Ten przewodnik przeprowadzi Cię przez kroki niezbędne do ręcznej instalacji i konfiguracji nowego projektu Astro, jeśli nie chcesz używać [automatycznego narzędzia CLI](/[;]/install/auto/).
+Ten przewodnik przeprowadzi Cię przez kroki niezbędne do ręcznej instalacji i konfiguracji nowego projektu Astro, jeśli nie chcesz używać [automatycznego narzędzia CLI](/[pl]/install/auto/).
 
 
 #### Wolisz szybszy sposób na rozpoczęcie pracy?
@@ -192,4 +192,4 @@ Jeśli wykonałeś powyższe kroki, Twój katalog projektu powinien teraz wyglą
 
 Gratulacje, jesteś teraz przygotowany do korzystania z Astro!
 
-Jeśli podążałeś za tym przewodnikiem, możesz przejść bezpośrednio do [Krok 2: Uruchom Astro](/pl/install/auto/#2-start-astro-), aby kontynuować i dowiedzieć się jak uruchomić Astro po raz pierwszy.
+Jeśli podążałeś za tym przewodnikiem, możesz przejść bezpośrednio do [Krok 2: Uruchom Astro](/pl/install/auto/#2-uruchamianie-astro-), aby kontynuować i dowiedzieć się jak uruchomić Astro po raz pierwszy.
