changed sentence formulation in images.mdx
Co-authored-by: pioupia <49518790+pioupia@users.noreply.github.com>

--- a/src/pages/fr/guides/images.mdx
+++ b/src/pages/fr/guides/images.mdx
@@ -98,7 +98,7 @@ import logo from '../images/logo.png';
 Vos images stockées dans `public/` peuvent être utilisées par les composants (`.astro`, `.mdx` et autres Frameworks UI) mais aussi dans les fichiers Markdown.
 
 
-Cependant les fichiers dans le répertoire `/public` sont toujours utilisés ou copiés tels quels, sans aucun traitement. Si vous utilisez des images en dehors des fichiers Markdown, nous vous recommandons de conserver les images dans `src` lorsque cela est possible afin qu'Astro puisse les transformer, les optimiser et les regrouper.
+Cependant les fichiers dans le répertoire `/public` sont toujours utilisés ou copiés tels quels, sans aucun traitement. Si vous utilisez des images en dehors des fichiers Markdown, nous vous recommandons de les conserver  dans le dossier `src` lorsque cela est possible afin qu'Astro puisse les transformer, les optimiser et les regrouper.
 
 L'attribut `src` est **relatif au dossier public**. Dans Markdown, vous pouvez aussi utiliser la notation `![]()`.
 
