typo fix in images.mdx
Co-authored-by: pioupia <49518790+pioupia@users.noreply.github.com>

--- a/src/pages/fr/guides/images.mdx
+++ b/src/pages/fr/guides/images.mdx
@@ -109,7 +109,7 @@ L'attribut `src` est **relatif au dossier public**. Dans Markdown, vous pouvez a
 <img src="/images/logo.png" />
 ```
 
-## Intégration des image Astro
+## Intégration des images Astro
 
 L'intégration officielle d'Astro des images fournit deux composants Astro différents pour rendre des images optimisées, `<Image />` et `<Picture />`. Cela est supporté pour tous les sites statiques et pour [certains hébergeurs de déploiement rendu côté serveur](/fr/guides/integrations-guide/image/#installation).
 
