changed sentence formulation in images.mdx
Co-authored-by: pioupia <49518790+pioupia@users.noreply.github.com>

--- a/src/pages/fr/guides/images.mdx
+++ b/src/pages/fr/guides/images.mdx
@@ -111,7 +111,7 @@ L'attribut `src` est **relatif au dossier public**. Dans Markdown, vous pouvez a
 
 ## Intégration des images Astro
 
-L'intégration officielle d'Astro des images fournit deux composants Astro différents pour rendre des images optimisées, `<Image />` et `<Picture />`. Cela est supporté pour tous les sites statiques et pour [certains hébergeurs de déploiement rendu côté serveur](/fr/guides/integrations-guide/image/#installation).
+L'intégration officielle d'Astro des images fournit deux composants Astro différents pour rendre des images optimisées, `<Image />` et `<Picture />`. Celle-ci est supportée pour tous les sites statiques et pour [certains hébergeurs de déploiement rendu côté serveur](/fr/guides/integrations-guide/image/#installation).
 
 Après [avoir installé `@astrojs/image`](/fr/guides/integrations-guide/image/#installation), vous pouvez utiliser ces deux composants partout où vous pouvez utiliser des composants Astro : dans les fichiers `.astro` et `.mdx`.
 
