changed sentence formulation in images.mdx
Co-authored-by: pioupia <49518790+pioupia@users.noreply.github.com>

--- a/src/pages/fr/guides/images.mdx
+++ b/src/pages/fr/guides/images.mdx
@@ -169,7 +169,7 @@ const localAlt = "Le logo d'Astro";
 const remoteAlt = "Une vue en contre-plongée d'une forêt pendant la journée";
 ---
 
-<!-- Image locale optimisée, gardant largeur, hauteur et format d'image originaux -->
+<!-- Image locale optimisée, gardant la largeur, la hauteur et le format d'image d'origine -->
 <Image src={localImage} alt={localAlt} />
 
 <!-- La hauteur sera recalculée pour correspondre au ratio d'aspect original -->
