changed sentence formulation in images.mdx
Co-authored-by: pioupia <49518790+pioupia@users.noreply.github.com>

--- a/src/pages/fr/guides/images.mdx
+++ b/src/pages/fr/guides/images.mdx
@@ -233,7 +233,7 @@ Bien que [`formats`](/fr/guides/integrations-guide/image/#formats) ne soit pas r
 
 Passez à l'attribut `src` du composant un chemin relatif au dossier public et incluez une valeur pour `alt`.
 
-L'image sera traitée comme une image distante, donc une valeur pour `aspectRatio` est également requise pour s'assurer que la hauteur correcte puisse être calculée au moment du Build.
+L'image sera traitée comme une image distante, donc une valeur pour `aspectRatio` est également requise pour s'assurer que la hauteur puisse être correctement calculée au moment du Build.
 
 Vous devez fournir au composant des indications sur les largeurs d'image et les tailles d'écran, mais [toutes les autres propriétés](/fr/guides/integrations-guide/image/#picture-) sont facultatives.
 
