changed paragraph order in images.mdx

--- a/src/pages/fr/guides/images.mdx
+++ b/src/pages/fr/guides/images.mdx
@@ -123,14 +123,6 @@ Ce composant est utile pour les images qui doivent conserver une taille constant
 
 Pour les images responsive, ou pour une direction artistique, utilisez plutôt le composant `<Picture />`.
 
-#### Images locales dans `src/`
-
-(attributs requis : [`src`](/fr/guides/integrations-guide/image/#src), et [`alt`](/fr/guides/integrations-guide/image/#alt))
-
-Importez votre image dans le Frontmatter et passez-la directement à l'attribut `src` du composant `<Image />`.
-
-`alt` est requis, mais [toutes les autres propriétés](/fr/guides/integrations-guide/image/#image-) sont facultatives et, si elles ne sont pas fournies, prendront par défaut les propriétés d'origine du fichier image.
-
 #### Images distantes
 
 (attributs requis : [`src`](/fr/guides/integrations-guide/image/#src), [`alt`](/fr/guides/integrations-guide/image/#alt), [`format`](/fr/guides/integrations-guide/image/#format), et dimensions)
@@ -143,7 +135,15 @@ Vous devez également fournir soit [`width`](/fr/guides/integrations-guide/image
 
 [Toutes les autres propriétés](/fr/guides/integrations-guide/image/#image-) sont facultatives.
 
-#### Images locales dans `public/`
+#### Images locales dans `src/`
+
+(attributs requis : [`src`](/fr/guides/integrations-guide/image/#src), et [`alt`](/fr/guides/integrations-guide/image/#alt))
+
+Importez votre image dans le Frontmatter et passez-la directement à l'attribut `src` du composant `<Image />`.
+
+`alt` est requis, mais [toutes les autres propriétés](/fr/guides/integrations-guide/image/#image-) sont facultatives et, si elles ne sont pas fournies, prendront par défaut les propriétés d'origine du fichier image.
+
+#### Images dans `public/`
 
 (attributs requis : [`src`](/fr/guides/integrations-guide/image/#src), [`alt`](/fr/guides/integrations-guide/image/#alt), [`format`](/fr/guides/integrations-guide/image/#format), et dimensions)
 
@@ -205,16 +205,6 @@ Ce composant est utile pour optimiser ce que votre utilisateur voit à différen
 Consultez le guide de MDN pour plus d'informations sur [les images responsive et la direction arstistique](https://developer.mozilla.org/fr/docs/Learn/HTML/Multimedia_and_embedding/Responsive_images#d%C3%A9cision_de_nature_artistique).
 :::
 
-#### Images locales
-
-(attributs requis : [`src`](/fr/guides/integrations-guide/image/#src-1), [`widths`](/fr/guides/integrations-guide/image/#widths), [`sizes`](/fr/guides/integrations-guide/image/#sizes), [`alt`](/fr/guides/integrations-guide/image/#alt-1))
-
-Importez votre image dans Frontmatter et passez-la directement à l'attribut `src` du composant `<Picture />`.
-
-Vous devez fournir au composant des indications sur les largeurs d'image et les tailles d'écran, mais [toutes les autres propriétés](/fr/guides/integrations-guide/image/#picture-) sont facultatives.
-
-Par défaut, les [`formats`](/fr/guides/integrations-guide/image/#formats) du composant `<Picture />` incluront `avif` et `webp` en plus du format d'origine de l'image s'il n'est pas spécifié.
-
 #### Images distantes
 
 (attributs requis : [`src`](/fr/guides/integrations-guide/image/#src-1), [`widths`](/fr/guides/integrations-guide/image/#widths), [`sizes`](/fr/guides/integrations-guide/image/#sizes), [`alt`](/fr/guides/integrations-guide/image/#alt-1), et [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio-1))
@@ -227,7 +217,17 @@ Vous devez fournir au composant des indications sur les largeurs d'image et les 
 
 Bien que [`formats`](/fr/guides/integrations-guide/image/#formats) ne soit pas requis, le format d'image d'origine des images distantes est inconnu et ne sera pas inclus par défaut. S'il n'est pas fourni, seuls `webp` et `avif` seront inclus.
 
-#### Images locales dans `public/`
+#### Images locales
+
+(attributs requis : [`src`](/fr/guides/integrations-guide/image/#src-1), [`widths`](/fr/guides/integrations-guide/image/#widths), [`sizes`](/fr/guides/integrations-guide/image/#sizes), [`alt`](/fr/guides/integrations-guide/image/#alt-1))
+
+Importez votre image dans Frontmatter et passez-la directement à l'attribut `src` du composant `<Picture />`.
+
+Vous devez fournir au composant des indications sur les largeurs d'image et les tailles d'écran, mais [toutes les autres propriétés](/fr/guides/integrations-guide/image/#picture-) sont facultatives.
+
+Par défaut, les [`formats`](/fr/guides/integrations-guide/image/#formats) du composant `<Picture />` incluront `avif` et `webp` en plus du format d'origine de l'image s'il n'est pas spécifié.
+
+#### Images dans `public/`
 
 (attributs requis : [`src`](/fr/guides/integrations-guide/image/#src-1), [`widths`](/fr/guides/integrations-guide/image/#widths), [`sizes`](/fr/guides/integrations-guide/image/#sizes), [`alt`](/fr/guides/integrations-guide/image/#alt-1), et [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio-1))
 
