--- a/src/pages/fr/guides/images.mdx
+++ b/src/pages/fr/guides/images.mdx
@@ -253,7 +253,7 @@ const remoteImage = 'https://www.google.com/images/branding/googlelogo/2x/google
 <!-- Image locale avec plusieurs tailles et formats -->
 <Picture src={localImage} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" formats={['avif', 'jpeg', 'png', 'webp']} alt="The Astro logo" />
 
-<!-- Image distante (le ratio d'aspect est requis) -->
+<!-- Image distante (le rapport d'aspect est requis) -->
 <Picture src={remoteImage} widths={[200, 400, 800]} aspectRatio="4:3" sizes="(max-width: 800px) 100vw, 800px" alt="Le logo Google" />
 
 <!-- Les images dans /public fonctionnent comme les images distantes -->
