--- a/src/content/docs/zh-cn/guides/testing.mdx
+++ b/src/content/docs/zh-cn/guides/testing.mdx
@@ -18,7 +18,7 @@ Playwright 是一个针对现代网络应用的端到端测试框架。使用 Ja
 
 你可以使用 [VS 代码扩展](https://playwright.dev/docs/getting-started-vscode) 开始并运行你的测试。
 
-或者，你可以使用你选择的包管理器在你的 Astro 项目中安装 Playwright。按照 CLI 步骤选择 Javascript/Type 脚本，命名测试文件夹，并添加一个可选的 Github Actions 工作流。
+或者，你可以使用你选择的包管理器在你的 Astro 项目中安装 Playwright。按照 CLI 步骤选择 JavaSript/TypeScript，命名测试文件夹，并添加一个可选的 Github Actions 工作流。
 
 <PackageManagerTabs>
   <Fragment slot="npm">
