--- a/src/content/docs/en/guides/imports.mdx
+++ b/src/content/docs/en/guides/imports.mdx
@@ -232,8 +232,8 @@ const data = JSON.parse(json);
 
 With **Vite** and compatible **Rollup** plugins, you can import file types which aren't natively supported by Astro. Learn where to find the plugins you need in the [Finding Plugins](https://vitejs.dev/guide/using-plugins.html#finding-plugins) section of the Vite Documentation.
 
+:::note[plugin configuration]
 Refer to your plugin's documentation for configuration options, and how to correctly install it.
-
-:::note[Related recipe]
-[Add support for importing YAML](/en/recipes/add-yaml-support/)
 :::
+
+🧑‍🍳 [Add support for importing YAML data](/en/recipes/add-yaml-support/).
