related recipes bold text instead of heading; might delete

--- a/src/content/docs/en/guides/imports.mdx
+++ b/src/content/docs/en/guides/imports.mdx
@@ -236,4 +236,6 @@ With **Vite** and compatible **Rollup** plugins, you can import file types which
 Refer to your plugin's documentation for configuration options, and how to correctly install it.
 :::
 
+**Related recipe**
+
 🧑‍🍳 [Add support for importing YAML data](/en/recipes/add-yaml-support/).
