--- a/src/pages/fr/guides/images.mdx
+++ b/src/pages/fr/guides/images.mdx
@@ -281,7 +281,7 @@ export const galaxy = 'https://astro.build/assets/galaxy.jpg';
 <Picture src={galaxy} widths={[200, 400, 800]} aspectRatio={16/9} sizes="(max-width: 800px) 100vw, 800px" alt="Le cosmos." />
 ```
 
-### Définitions des valeurs par défaut
+### Réglage des valeurs par défaut
 
 Actuellement, il n'existe aucun moyen de spécifier des valeurs par défaut pour tous les composants `<Image />` et `<Picture />`. Les attributs requis doivent être définis sur chaque composant.
 
