correct `Since` component import

--- a/src/content/docs/fr/guides/images.mdx
+++ b/src/content/docs/fr/guides/images.mdx
@@ -3,7 +3,7 @@ title: Images
 description: Apprendre à utiliser les images dans Astro.
 i18nReady: true
 ---
-import Since from '../../../components/Since.astro';
+import Since from '~/components/Since.astro';
 
 
 Astro fournit plusieurs façons d'utiliser les images sur votre site, qu'elles soient stockées localement dans votre projet, liées à distance ou stockées dans un CMS ou un CDN !
