docs: explicit info about failing test

--- a/src/content/docs/en/guides/testing.mdx
+++ b/src/content/docs/en/guides/testing.mdx
@@ -132,7 +132,7 @@ To check that your test really does work, you can change the following line in t
   </body>
 ```
 
-Then run the test again. You should see a red mark in the output confirming that your test failed.
+Then run the test again. You should see a red "x" in the output confirming that your test failed.
 :::
 
 ### Next steps
