Fix  broken link

--- a/src/content/docs/pl/install/manual.mdx
+++ b/src/content/docs/pl/install/manual.mdx
@@ -8,7 +8,7 @@ import FileTree from '~/components/FileTree.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
-Ten przewodnik przeprowadzi Cię przez kroki niezbędne do ręcznej instalacji i konfiguracji nowego projektu Astro, jeśli nie chcesz używać [automatycznego narzędzia CLI](/[pl]/install/auto/).
+Ten przewodnik przeprowadzi Cię przez kroki niezbędne do ręcznej instalacji i konfiguracji nowego projektu Astro, jeśli nie chcesz używać [automatycznego narzędzia CLI](/pl/install/auto/).
 
 
 #### Wolisz szybszy sposób na rozpoczęcie pracy?
