--- a/src/content/docs/en/core-concepts/astro-components.mdx
+++ b/src/content/docs/en/core-concepts/astro-components.mdx
@@ -324,7 +324,7 @@ interface Props {
   greeting?: string;
 }
 
-const { greeting = "Hello", name } = Astro.props;
+const { greeting = "Hello", name } = Astro.props as Props;
 ---
 <h2>{greeting}, {name}!</h2>
 ```
@@ -334,7 +334,7 @@ Component props can be given default values to use when none are provided.
 ```astro ins="= \"Hello\"" ins="= \"Astronaut\""
 ---
 // src/components/GreetingHeadline.astro
-const { greeting = "Hello", name = "Astronaut" } = Astro.props;
+const { greeting = "Hello", name = "Astronaut" } = Astro.props as Props;
 ---
 <h2>{greeting}, {name}!</h2>
 ```
