Make collection conversion more clear against the existing tutorial

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -233,8 +233,10 @@ defineCollection({
     tags: z.array(z.string()),
     // An optional frontmatter property. Very common!
     footnote: z.string().optional(),
-    // Convert a standard date-string into a `Date` object
-    publishDate: z.string().transform(str => new Date(str)),
+    // Dates in frontmatter, written without "" around them are read in as actual date objects
+    // Alternatively, you could transform a string date to a real date with
+    // z.string().transform((str) => new Date(str))
+    publishDate: z.date(),
     // Advanced: Validate that the string is also an email
     authorContact: z.string().email(),
     // Advanced: Validate that the string is also a URL
@@ -549,9 +551,9 @@ This guide shows you how to convert an existing Astro project with Markdown file
     Any individual Markdown or MDX file imports should be replaced by [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug).
     :::
 
-    Lastly, the tutorial blog project includes an RSS feed. This file must also use `getCollection` and use the `data` object:
+    Lastly, the tutorial blog project includes an RSS feed. This file must be converted to an async function, use `getCollection`, and use the `data` object:
 
-    ```js title="src/pages/rss.xml.js" {5, 10-15} 
+    ```js title="src/pages/rss.xml.js" {4-5, 10-15} 
     import rss from "@astrojs/rss";
     import { getCollection } from "astro:content";
 
