--- a/src/content/docs/pl/install/manual.mdx
+++ b/src/content/docs/pl/install/manual.mdx
@@ -122,7 +122,7 @@ console.log('To działa w terminalu, nie w przeglądarce!')
 
 Należy również utworzyć katalog `public/` do przechowywania statycznych zasobów. Astro zawsze będzie dołączać te zasoby do końcowego kompilatora, więc możesz bezpiecznie odwoływać się do nich z wnętrza swoich szablonów komponentów.
 
-W edytorze tekstu utwórz nowy plik w swoim katalogu pod adresem `public/robots.txt`. `robots.txt` jest prostym plikiem, który większość stron zawiera, aby powiedzieć botom wyszukiwarek, takim jak Google, jak mają traktować Twoją stronę.
+W edytorze tekstu utwórz nowy plik w swoim katalogu pod adresem `public/robots.txt`. `robots.txt` jest prostym plikiem, który zawiera większość stron, aby powiedzieć botom wyszukiwarek, takim jak Google, jak mają traktować Twoją stronę.
 
 Dla tego przewodnika, skopiuj i wklej następujący fragment kodu do swojego nowego pliku:
 
