--- a/src/content/docs/pl/install/manual.mdx
+++ b/src/content/docs/pl/install/manual.mdx
@@ -8,7 +8,7 @@ import FileTree from '~/components/FileTree.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
-Ten przewodnik przeprowadzi Cię przez kroki niezbędne do ręcznej instalacji i konfiguracji nowego projektu Astro, jeśli nie chcesz używać [automatycznego narzędzia CLI](/pl/install/auto/).
+Ten przewodnik przeprowadzi Cię przez kroki niezbędne do ręcznej instalacji i konfiguracji nowego projektu Astro, jeśli wolisz nie używać [automatycznego narzędzia CLI](/pl/install/auto/).
 
 
 #### Wolisz szybszy sposób na rozpoczęcie pracy?
@@ -96,12 +96,12 @@ Tych skryptów użyjesz w dalszej części przewodnika, aby uruchomić Astro i w
 
 W edytorze tekstu utwórz nowy plik w swoim katalogu pod adresem `src/pages/index.astro`. To będzie twoja pierwsza strona Astro w projekcie.
 
-Dla tego przewodnika, skopiuj i wklej następujący fragment kodu (włączając `---` kreski) do nowego pliku:
+Na potrzeby tego przewodnika, skopiuj i wklej następujący fragment kodu (włączając `---` kreski) do nowego pliku:
 
 ```astro title="src/pages/index.astro"
 ---
-// Witamy w Astro! Wszystko pomiędzy tymi potrójnymi kreskami w kodzie 
-// nigdy nie jest uruchamiane w przeglądarce.
+// Witamy w Astro! Wszystko pomiędzy tymi potrójnymi kreskami to "front matter" twojego komponentu.
+// Jego zawartość nigdy nie zostanie wykonana w przeglądarce.
 console.log('To działa w terminalu, nie w przeglądarce!')
 ---
 <!-- Poniżej znajduje się twój "szablon komponentu". Jest to po prostu HTML, ale z
@@ -120,7 +120,7 @@ console.log('To działa w terminalu, nie w przeglądarce!')
 
 ## 4. Utwórz swój pierwszy statyczny zasób
 
-Należy również utworzyć katalog `public/` do przechowywania statycznych zasobów. Astro zawsze będzie dołączać te zasoby do końcowego kompilatora, więc możesz bezpiecznie odwoływać się do nich z wnętrza swoich szablonów komponentów.
+Należy również utworzyć katalog `public/` do przechowywania statycznych zasobów. Astro zawsze będzie dołączać te zasoby do końcowej kompilacji, więc możesz bezpiecznie odwoływać się do nich z wnętrza swoich szablonów komponentów.
 
 W edytorze tekstu utwórz nowy plik w swoim katalogu pod adresem `public/robots.txt`. `robots.txt` jest prostym plikiem, który zawiera większość stron, aby powiedzieć botom wyszukiwarek, takim jak Google, jak mają traktować Twoją stronę.
 
