--- a/src/content/docs/pl/install/manual.mdx
+++ b/src/content/docs/pl/install/manual.mdx
@@ -102,7 +102,7 @@ Na potrzeby tego przewodnika, skopiuj i wklej następujący fragment kodu (włą
 ---
 // Witamy w Astro! Wszystko pomiędzy tymi potrójnymi kreskami to "front matter" twojego komponentu.
 // Jego zawartość nigdy nie zostanie wykonana w przeglądarce.
-console.log('To działa w terminalu, nie w przeglądarce!')
+console.log('To wykona się w terminalu, nie w przeglądarce!')
 ---
 <!-- Poniżej znajduje się twój "szablon komponentu". Jest to po prostu HTML, ale z
      odrobiną magii, która pomoże Ci zbudować wspaniałe szablony. -->
