--- a/src/content/docs/es/reference/errors/unknown-csserror.mdx
+++ b/src/content/docs/es/reference/errors/unknown-csserror.mdx
@@ -10,7 +10,7 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 ---
 
 ## ¿Qué salió mal?
-Astro encontró un error desconocido al analizar su CSS. A menudo, esto se debe a un error de sintaxis y el mensaje de error debe contener más información.
+Astro encontró un error desconocido al analizar el CSS. A menudo, esto se debe a un error de sintaxis y el mensaje de error debe contener más información.
 
 **Ver también:**
 -  [Estilos & CSS](/es/guides/styling/)
