--- a/src/content/docs/es/reference/errors/unknown-markdown-error.mdx
+++ b/src/content/docs/es/reference/errors/unknown-markdown-error.mdx
@@ -10,7 +10,7 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 ---
 
 ## ¿Qué salió mal?
-Astro encontró un error desconocido al analizar su Markdown. A menudo, esto se debe a un error de sintaxis y el mensaje de error debe contener más información.
+Astro encontró un error desconocido al analizar el Markdown. A menudo, esto se debe a un error de sintaxis y el mensaje de error debe contener más información.
 
 
 
