--- a/src/content/docs/es/reference/errors/unknown-vite-error.mdx
+++ b/src/content/docs/es/reference/errors/unknown-vite-error.mdx
@@ -10,10 +10,9 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 ---
 
 ## ¿Qué salió mal?
-Vite encountered an unknown error while rendering your project. We unfortunately do not know what happened (or we would tell you!)
-Vite encontró un error desconocido mientras renderizaba su proyecto. Desafortunadamente no sabemos qué pasó (o ¡te lo diríamos!)
+Vite encontró un error desconocido mientras renderizaba tu proyecto. Desafortunadamente no sabemos qué pasó (o ¡te lo diríamos!)
 
-Si puedes reproducir de forma confiable este error, nos gustaría que [abrieras un problema](https://astro.build/issues/)
+Si puedes reproducir de forma confiable este error, nos gustaría que [abrieras una issue](https://astro.build/issues/)
 
 **Ver también:**
 -  [Guía de solución de problemas de Vite](https://vitejs.dev/guide/troubleshooting.html)
