--- a/src/content/docs/es/guides/upgrade-to/v2.mdx
+++ b/src/content/docs/es/guides/upgrade-to/v2.mdx
@@ -12,7 +12,7 @@ Esta guía te ayudará a migrar de la versión Astro v1 a la Astro v2.
 
 ## Actualiza Astro
 
-Actualiza la versión de tu proyecto Astro a la última versión usando el manejador de paquetes. Si estás utilizando alguna integración, también acutalizalas a la última versión.
+Actualiza la versión de tu proyecto Astro a la última versión usando el gestor de paquetes. Si estás utilizando alguna integración, también acutalizalas a la última versión.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -58,9 +58,9 @@ Astro v2.0 elimina completamente el soporte para Node 14, para que todos los usu
 
 #### ¿Qué debería hacer?
 
-Checa que tanto tu entorno de desarrollo como tu entorno de producción estén usando **Node `16.12.0` o superior**.
+Verifica que tanto tu entorno de desarrollo como tu entorno de producción estén usando **Node `16.12.0` o superior**.
 
-1. Checa la versión local de Node usando:
+1. Verifica la versión local de Node usando:
 
     ```sh
     node -v
@@ -68,7 +68,7 @@ Checa que tanto tu entorno de desarrollo como tu entorno de producción estén u
     ```
     Si tu entorno de desarrollo necesita actualizarse, [instala Node](https://nodejs.org/es/download/).
 
-2. Checa la propia documentación del [entorno de producción](/es/guides/deploy/) para verificar que ellos soportan Node 16.
+2. Verifica la propia documentación del [entorno de producción](/es/guides/deploy/) para verificar que ellos soportan Node 16.
 
     Puedes especificar Node `16.12.0` para tu proyecto Astro en una opción de configuración del dashboard o en un archivo `.nvmrc`.
 
@@ -154,7 +154,7 @@ Astro v2.0 remplaza `markdown.extendDefaultPlugins: false` con opciones booleana
 
 ##### ¿Qué debería hacer?
 
-Elimina `extendDefaultPlugins: false` y agrega las flags para deshabilitar cada plugin individualmente en su lugar.
+Elimina `extendDefaultPlugins: false` y agrega las opciones para deshabilitar cada plugin individualmente en su lugar.
 
 - `markdown.gfm: false` deshabilita GitHub-Flavored Markdown
 - `markdown.smartypants: false` deshabilita SmartyPants
@@ -258,7 +258,7 @@ Astro v2.0 da acceso a los plugins de remark y rehype al frontmatter del usuario
 
 #### ¿Qué debería hacer?
 
-Checa cualquier plugin de remark y rehype que hayas escrito para ver si su comportamiento ha cambiado. Ten en cuenta que `data.astro.frontmatter` ahora es el frontmatter _completo_ del documento Markdown o MDX, en lugar de un objeto vacío.
+Verifica cualquier plugin de remark y rehype que hayas escrito para ver si su comportamiento ha cambiado. Ten en cuenta que `data.astro.frontmatter` ahora es el frontmatter _completo_ del documento Markdown o MDX, en lugar de un objeto vacío.
   
 ### Cambió: Configuración de RSS
 
@@ -393,9 +393,9 @@ No deberías tener que hacer cambios en tu código. ¡Hemos manejado la mayoría
 
 Refierete a la [guía oficial de migración de Vite](https://vitejs.dev/guide/migration.html) si tienes problemas.
 
-## Astro v2.0 Flags Experimentales Eliminados
+## Astro v2.0 Opciones Experimentales Eliminados
 
-Elimina las siguientes flags experimentales de `astro.config.mjs`:
+Elimina las siguientes opciones experimentales de `astro.config.mjs`:
 
 ```js del={5-9}
 // astro.config.mjs
