updated links to recipes - one line

--- a/src/content/docs/en/guides/server-side-rendering.mdx
+++ b/src/content/docs/en/guides/server-side-rendering.mdx
@@ -232,6 +232,4 @@ if (!product) {
 A server endpoint, also known as an **API route**, is a special function exported from a `.js` or `.ts` file within the `src/pages/` folder. 
 The function takes an [endpoint context](/en/reference/api-reference/#endpoint-context) and returns a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response). A powerful feature of SSR, API routes are able to securely execute code on the server. To learn more, see our [Endpoints Guide](/en/core-concepts/endpoints/#server-endpoints-api-routes).
 
-**Related recipe**
-
-🧑‍🍳 [Use server endpoints to verify a CAPTCHA](/en/recipes/captcha/)
+**Related recipe:** [Use server endpoints to verify a CAPTCHA](/en/recipes/captcha/)
