--- a/src/content/docs/en/guides/imports.mdx
+++ b/src/content/docs/en/guides/imports.mdx
@@ -236,6 +236,4 @@ With **Vite** and compatible **Rollup** plugins, you can import file types which
 Refer to your plugin's documentation for configuration options, and how to correctly install it.
 :::
 
-**Related recipe**
-
-🧑‍🍳 [Add support for importing YAML data](/en/recipes/add-yaml-support/).
+**Related recipe:** [Add support for importing YAML data](/en/recipes/add-yaml-support/).
