fix broken link, move recipe to proper page!

--- a/src/content/docs/en/core-concepts/endpoints.mdx
+++ b/src/content/docs/en/core-concepts/endpoints.mdx
@@ -210,4 +210,4 @@ export async function get({ params, redirect }) {
 }
 ```
 
-See an example of [verifying a captcha](/en/guides/recipes/captcha/)
+**Related recipe:** [Use server endpoints to verify a CAPTCHA](/en/recipes/captcha/)
