docs: fix unescaped string in title

--- a/src/content/docs/en/guides/markdown-content.mdx
+++ b/src/content/docs/en/guides/markdown-content.mdx
@@ -280,7 +280,7 @@ When you import Markdown and MDX files in an Astro component, you get an object 
 
 ```md title="/src/pages/posts/great-post.md"
 ---
-title: 'The best post I've ever written'
+title: 'The greatest post of all time'
 author: 'Ben'
 ---
 
@@ -307,7 +307,7 @@ In MDX files, you can access properties from both frontmatter and `export` state
 
 ```mdx title="/src/pages/posts/mdx-post.mdx"
 ---
-title: 'The best post I've ever written'
+title: 'The greatest post of all time'
 author: 'Ben'
 ---
 export const description = 'Get comfortable! This is going to be a great read.'
